--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.9.13",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-pathify": "^1.5.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
