--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^6.5.95",
     "buefy": "^0.9.13",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
